22/httpd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: httpd
spec:
    replicas: 1
    selector:
        matchLabels:
            app: httpd
    template:
        metadata:
            labels:
                app: httpd
        spec:
            containers:
            - name: httpd
              image: httpd
              ports:
              - containerPort: 80
