22/httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: httpd
spec:
    type: NodePort
    selector:
        app: httpd
    ports:
    - port: 80
      targetPort: 80
