22/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ing
spec:
    rules:
    - http:
        paths:
        - path: /nginx
          backend:
            serviceName: nginx
            servicePort: 80
        - path: /httpd
          backend:
            serviceName: httpd
            servicePort: 80
